# serializer version: 1
# name: test_all_binary_sensors[binary_sensor.pool_device_alarm_relay_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_alarm_relay_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm relay status',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Alarm relay status',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_alarm',
    'unique_id': 'TEST123456789_relay_alarm',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_alarm_relay_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Pool Device Alarm relay status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_alarm_relay_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_auxiliary_relay_1_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_auxiliary_relay_1_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auxiliary relay 1 status',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Auxiliary relay 1 status',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux1',
    'unique_id': 'TEST123456789_relay_aux1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_auxiliary_relay_1_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Pool Device Auxiliary relay 1 status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_auxiliary_relay_1_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_auxiliary_relay_2_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_auxiliary_relay_2_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auxiliary relay 2 status',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Auxiliary relay 2 status',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux2',
    'unique_id': 'TEST123456789_relay_aux2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_auxiliary_relay_2_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Pool Device Auxiliary relay 2 status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_auxiliary_relay_2_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_auxiliary_relay_3_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_auxiliary_relay_3_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auxiliary relay 3 status',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Auxiliary relay 3 status',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux3',
    'unique_id': 'TEST123456789_relay_aux3',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_auxiliary_relay_3_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Pool Device Auxiliary relay 3 status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_auxiliary_relay_3_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_chlorine_overfeed_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_chlorine_overfeed_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Chlorine overfeed 2',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Chlorine overfeed 2',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_ofa2_cl',
    'unique_id': 'TEST123456789_alarm_ofa2_cl',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_chlorine_overfeed_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device Chlorine overfeed 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_chlorine_overfeed_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_chlorine_tank_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_chlorine_tank_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Chlorine tank level',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Chlorine tank level',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_ofa_cl',
    'unique_id': 'TEST123456789_alarm_ofa_cl',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_chlorine_tank_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device Chlorine tank level',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_chlorine_tank_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_chlorine_too_high-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_chlorine_too_high',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Chlorine too high',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Chlorine too high',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_cl_too_high',
    'unique_id': 'TEST123456789_alarm_cl_too_high',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_chlorine_too_high-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device Chlorine too high',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_chlorine_too_high',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_chlorine_too_high_orp-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_chlorine_too_high_orp',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Chlorine too high (ORP)',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Chlorine too high (ORP)',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_cl_too_high_orp',
    'unique_id': 'TEST123456789_alarm_cl_too_high_orp',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_chlorine_too_high_orp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device Chlorine too high (ORP)',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_chlorine_too_high_orp',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_chlorine_too_low_orp-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_chlorine_too_low_orp',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Chlorine too low (ORP)',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Chlorine too low (ORP)',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_cl_too_low_orp',
    'unique_id': 'TEST123456789_alarm_cl_too_low_orp',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_chlorine_too_low_orp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device Chlorine too low (ORP)',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_chlorine_too_low_orp',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_flow_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_flow_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flow rate',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Flow rate',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flow_rate_alarm',
    'unique_id': 'TEST123456789_flow_rate_alarm',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_flow_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device Flow rate',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_flow_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_orp_overfeed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_orp_overfeed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'ORP overfeed',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'ORP overfeed',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_ofa_orp',
    'unique_id': 'TEST123456789_alarm_ofa_orp',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_orp_overfeed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device ORP overfeed',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_orp_overfeed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_orp_overfeed_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_orp_overfeed_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'ORP overfeed 2',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'ORP overfeed 2',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_ofa2_orp',
    'unique_id': 'TEST123456789_alarm_ofa2_orp',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_orp_overfeed_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device ORP overfeed 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_orp_overfeed_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_orp_tank_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_orp_tank_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'ORP tank level',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'ORP tank level',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'orp_level_alarm',
    'unique_id': 'TEST123456789_orp_level_alarm',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_orp_tank_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device ORP tank level',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_orp_tank_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_ph_overfeed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_ph_overfeed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH overfeed',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'pH overfeed',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_ofa_ph',
    'unique_id': 'TEST123456789_alarm_ofa_ph',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_ph_overfeed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device pH overfeed',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_ph_overfeed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_ph_overfeed_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_ph_overfeed_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH overfeed 2',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'pH overfeed 2',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_ofa2_ph',
    'unique_id': 'TEST123456789_alarm_ofa2_ph',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_ph_overfeed_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device pH overfeed 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_ph_overfeed_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_ph_tank_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_ph_tank_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH tank level',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'pH tank level',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph_level_alarm',
    'unique_id': 'TEST123456789_ph_level_alarm',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_ph_tank_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device pH tank level',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_ph_tank_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_ph_too_high-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_ph_too_high',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH too high',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'pH too high',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_ph_too_high',
    'unique_id': 'TEST123456789_alarm_ph_too_high',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_ph_too_high-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device pH too high',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_ph_too_high',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_ph_too_low-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_ph_too_low',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH too low',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'pH too low',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_ph_too_low',
    'unique_id': 'TEST123456789_alarm_ph_too_low',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_ph_too_low-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device pH too low',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_ph_too_low',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_recirculation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_recirculation',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Recirculation',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Recirculation',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pump_alarm',
    'unique_id': 'TEST123456789_pump_alarm',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_recirculation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device Recirculation',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_recirculation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_system_standby-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_system_standby',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'System standby',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'System standby',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_system_standby',
    'unique_id': 'TEST123456789_alarm_system_standby',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_system_standby-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device System standby',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_system_standby',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_water_too_cold-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_water_too_cold',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Water too cold',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Water too cold',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_water_too_cold',
    'unique_id': 'TEST123456789_alarm_water_too_cold',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_water_too_cold-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device Water too cold',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_water_too_cold',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_water_too_hot-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.pool_device_water_too_hot',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Water too hot',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Water too hot',
    'platform': 'pooldose',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_water_too_hot',
    'unique_id': 'TEST123456789_alarm_water_too_hot',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors[binary_sensor.pool_device_water_too_hot-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Pool Device Water too hot',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.pool_device_water_too_hot',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
